# rag-platform

./: .gitignore  AGENTS.md  AUDIT_REPORT.md  README.md  coverage.xml  pyproject.toml  pyrightconfig.json  requirements.txt
.opencode/plans/: 2026-07-22-adaptive-chunking-design.md
backend/: app.py  config.py
backend/api/: chat.py  documents.py  errors.py  health.py  upload.py
backend/cli/: __init__.py  debug_document.py
backend/evaluation/: README.md  __init__.py  benchmark_config.py  benchmark_models.py  cli.py  dataset.py  evaluator.py  metrics.py  models.py  questions.txt  run_benchmark.py  sample_questions.py
backend/evaluation/data/: test_queries.json
backend/models/: rag_models.py  schemas.py
backend/providers/: __init__.py  embeddings.py  exceptions.py  llm.py
backend/rag/: agent.py  bm25.py  chunking.py  citations.py  context_compression.py  embeddings.py  hybrid_retriever.py  indexing_config.py  llm.py  loader.py  parent_retrieval.py  prompts.py  query_expander.py  query_parser.py  query_rewriter.py  rag_agent.py  reranker.py  retrieval_config.py  retrieval_executor.py  retrieval_pipeline.py  retrieval_strategies.py  retrieval_utils.py  retriever.py  splitter.py  tool_executor.py  tool_registry.py  vector_store.py
backend/rag/tools/: __init__.py  list_documents.py  retrieve_context.py  search_by_filename.py
backend/services/: document_service.py  rag_service.py
backend/storage/: parent_store.py
backend/storage/parents/: 094ed707-10d7-49f4-9444-789831aaa2a4.json  21596c12-425e-4da2-a337-d1e53996b542.json  22454891-498c-4019-b03e-a4d57945956b.json  24e62cc5-0735-4753-b4c3-10cbcb47b472.json  3229e105-45a5-47dd-ad0d-74b346b34721.json  3d307c84-ab71-4afc-80b1-e8632330e36a.json  (+25 more)
backend/tests/: conftest.py  test_agent_tool_orchestration.py  test_chunking.py  test_context_compression.py  test_evaluation_metrics.py  test_list_documents_tool.py  test_parent_retrieval.py  test_prompts.py  test_query_expander.py  test_query_parser.py  test_retrieval_executor.py  test_retrieval_pipeline.py  test_retriever.py  test_search_by_filename_tool.py
backend/utils/: __init__.py  performance.py
benchmark_results/: benchmark_20260711_181849.json  benchmark_20260711_181849_summary.txt  benchmark_20260711_194250.json  benchmark_20260711_194250_summary.txt
docs/: API_SPEC.md  ARCHITECTURE.md  CHANGELOG.md  DECISIONS.md  PROJECT_PLAN.md  RAG_PIPELINE.md  TODO.md
frontend/: index.html  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  tsconfig.tsbuildinfo
frontend/playwright-report/: index.html
frontend/src/: App.tsx  index.css  main.tsx
frontend/tests/: global-setup.ts  global-teardown.ts  upload-flow.spec.ts
(+44 files in other folders)
